--- a/MERN/package.json
+++ b/MERN/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0"
   },
