--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js",
+     "build" :"npm install && npm install --prefix MERN && npm run build MERN",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
